force-app/main/default/objects/B25__Dimension__c/B25__Dimension__c.object-meta.xml
<CustomObject>
    <description>Object linking multiple Dimension Fields, telling Booker25 which Reservations to plot on which Dimensions.</description>
    <label>Dimension</label>
    <nameField>
        <label>Dimension Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dimensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>