force-app/main/default/objects/B25__Dimension__c/fields/B25__Availability_Lookup__c.field-meta.xml
<CustomField>
    <fullName>B25__Availability_Lookup__c</fullName>
    <description>The API name of a lookup field on B25__Availability__c to the dimension object. This allows you to
		configure (un)availabilities for this dimension.</description>
    <inlineHelpText>Le nom API d’un champ de recherche pour B25__Availability__c pour l’objet de dimension. Cela vous permet de configurer les (in)disponibilités pour cette dimension.</inlineHelpText>
    <label>Availability Lookup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>