force-app/main/default/objects/B25__Dimension__c/fields/B25__Dimension_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>B25__Dimension_Name_Field__c</fullName>
    <description>Enter the API name of the field that should be displayed as the name for this dimension.</description>
    <inlineHelpText>Saisissez le nom d&apos;API du champ qui doit être affiché comme nom pour cette dimension.</inlineHelpText>
    <label>Dimension Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>