force-app/main/default/objects/B25__Dimension__c/fields/B25__Sync_Field__c.field-meta.xml
<CustomField>
    <fullName>B25__Sync_Field__c</fullName>
    <description>The Api Name of a field on the Sync Connection object that is a lookup to the dimension object.
		This allows you to configure syncs for this object.</description>
    <inlineHelpText>Le nom API d’un champ pour l’objet de connexion de synchronisation qui est une recherche pour l’objet de dimension. Cela vous permet de configurer les synchronisations pour cet objet.</inlineHelpText>
    <label>Sync Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>