force-app/main/default/objects/B25__Dimension__c/fields/B25__Use_Shared_Conflict_Checking__c.field-meta.xml
<CustomField>
    <fullName>B25__Use_Shared_Conflict_Checking__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled (recommended), all fields and junctions in this dimension will conflict with each other. When disabled, they only conflict with themselves.</description>
    <inlineHelpText>Lorsqu&apos;il est activé (recommandé), tous les champs et jonctions de cette dimension entreront en conflit les uns avec les autres. Lorsqu&apos;ils sont désactivés, ils ne sont en conflit qu&apos;avec eux-mêmes.</inlineHelpText>
    <label>Use Shared Conflict Checking</label>
    <type>Checkbox</type>
</CustomField>